# ContraVC

./: AIRTABLE_SETUP.md  Contra_VC_Fund_I_AI_Native_Deck.pptx  My-Target-Investors-List.xlsx  My-Target-Investors-UNSCANNED.xlsx  MyAsiaVC_ICP_4.0_Prospect_List_External (1).xlsx  export.xlsx  preview_email.py  preview_email_api.py  test_generate_emails.py  test_generate_emails_api.py  ~$export.xlsx
contra/: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
contra/agents/: db.py  db_migrations.py
contra/agents/graph/: __init__.py  metrics.py  persist.py
contra/agents/ingestion/: docx_adapter.py  linkedin_csv_adapter.py  linkedin_normalize.py  nfx_selenium_scraper.py  nfx_xlsx_adapter.py  pdf_adapter.py  phantombuster_client.py  phantombuster_sync.py  pitchbook_scraper.py  pitchbook_xlsx_adapter.py  pptx_adapter.py  registry.py
contra/agents/normalization/: __init__.py  allocator_normalizer.py  crm_normalizer.py  icp_rules_normalizer.py  interaction_normalizer.py  linkedin_enricher.py  pitchbook_normalizer.py  taxonomies.py
contra/agents/ontology/: base.py  cache.py  heuristic.py  pipeline.py
contra/agents/research/: __init__.py  brief_agent.py  contact_hunter.py  enrichment_agent.py  llm_client.py  lp_prospector.py  nim_rerank.py  nim_router.py  ontology_enricher.py  openai_research.py  pitchbook_fetch.py  qa_agent.py  schemas.py  verifalia_client.py  web_search.py
contra/agents/reviews/: __init__.py  queue_writer.py
contra/agents/scoring/: contradiction_detector.py  icp_spec.py  rejection_extractor.py  signal_extractor.py  signal_types.py  syndicate_signal_extractor.py
contra/agents/uncertainty/: __init__.py
contra/api/: deps.py  main.py
contra/api/routers/: catalog.py  crm.py  discovery.py  gate.py  intel.py  ops.py
contra/archive/pulse/: .gitignore  AGENTS.md  Launch_PULSE.bat  Launch_PULSE.pyw  README.md  pyproject.toml  (+4 more)
contra/contra/: __main__.py  cli.py  orchestrator.py
contra/docs/: LP_GATE.md
contra/prompts/: graph_inference.yaml  heuristic_keywords.yaml  icp_calibration.yaml  uncertainty.yaml
contra/raw_data/: AI_Native_VC_Fund_Strategy.docx  Fund_Rating_Guide.xlsx  MyAsiaVC LP Scoping.xlsx  MyAsiaVC_ICP_4.0_Prospect_List_External.xlsx  Syndicate LPs - MyAsiaVC - 1777431165.xlsx  export.csv.bak  manifest.json
contra/schema/: duckdb.sql  models.py  postgres.sql  views.sql
contra/scripts/: backfill_contacts.py  migrate_to_motherduck.py  run-nim-rerank.ps1  setup_airtable.py  test-nim-rerank.ps1
(+1079 files in other folders)
