[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pulse"
version = "0.1.0"
description = "PULSE — Private-market Unified LP Signal Engine"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "duckdb>=0.10",
    "networkx>=3.2",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pdfplumber>=0.10",
    "rapidfuzz>=3.6",
    "typer>=0.12",
    "structlog>=24.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "rich>=13.0",
]

[project.optional-dependencies]
explore = ["streamlit>=1.32", "plotly>=5.18"]
research = [
    "instructor>=1.3",
    "anthropic>=0.25",
    "openai>=1.30",
    "google-generativeai>=0.7",
    "groq>=0.9",
    "tavily-python>=0.3",
]

[project.scripts]
pulse = "pulse.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pulse*", "agents*", "schema*"]

[tool.pytest.ini_options]
testpaths = ["evals"]
python_files = ["test_*.py", "run_evals.py"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
